--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "sever.js",
   "scripts": {
     "start": "node server.js",
-    "dev":"nodemon server.js",
-    "train":"nodemon train.js",
+    "dev": "nodemon server.js",
+    "train": "nodemon train.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ethan",
@@ -14,6 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongodb": "^3.2.6",
     "nodemon": "^3.0.3"
   }
 }
