--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^3.2.6",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "ops": "^0.0.1"
   }
 }
